[workspace]
members = [
    "crates/music-audio-session",
    "crates/music-audio-session-wasm",
    "crates/raptorq-datagram-fec",
    "crates/raptorq-fec-transport",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/wavey-ai/raptor-fec"
homepage = "https://github.com/wavey-ai/raptor-fec"
authors = ["Wavey AI"]

[workspace.dependencies]
async-trait = "0.1.88"
bytes = "1.5"
crc32fast = "1.5"
raptorq-datagram-fec = { version = "0.1.6", path = "crates/raptorq-datagram-fec", default-features = false }
raptorq = { version = "2", default-features = false }
tokio = { version = "1.45", default-features = false }
wasm-bindgen = "0.2"
