[package]
name = "music-audio-session"
version = "0.1.1"
edition.workspace = true
description = "Same-epoch multichannel audio session primitives over RaptorQ FEC."
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
raptorq-datagram-fec = { workspace = true, default-features = false }
