[package]
name = "raptorq-datagram-fec"
version = "0.1.2"
edition.workspace = true
description = "RaptorQ FEC framing for low-latency datagram transports."
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["udp"]
udp = ["dep:tokio"]

[dependencies]
bytes.workspace = true
raptorq.workspace = true
tokio = { workspace = true, optional = true, features = ["net"] }

[dev-dependencies]
rist-core = { git = "https://github.com/wavey-ai/rist-rs.git" }
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
