[package]
name = "raptorq-datagram-fec"
version = "0.1.6"
edition.workspace = true
description = "RaptorQ FEC framing for low-latency datagram transports."
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["udp"]
udp = ["dep:tokio"]

[dependencies]
bytes.workspace = true
crc32fast.workspace = true
raptorq.workspace = true
tokio = { workspace = true, optional = true, features = ["net"] }

[dev-dependencies]
rist-core = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
