[package]
name = "raptorq-fec-transport"
version = "0.1.1"
edition.workspace = true
description = "FEC wrappers for WebTransport datagrams and WebRTC data channels."
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
raptorq-datagram-fec = { workspace = true, default-features = false }
